Criando swagger para documentar endpoint de transferencia
